--- a/src/css/common.css
+++ b/src/css/common.css
@@ -27,8 +27,6 @@ body {
   left: 0;
   background-color: #fff;
   border-top: 1px solid #ccc;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .pyg_footer a {
@@ -36,9 +34,7 @@ body {
   font-size: 13px;
   text-align: center;
   padding-top: 5px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 .pyg_footer a i {
   font-size: 18px;
@@ -50,7 +46,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  opacity: 0.5;
+  opacity: .5;
   content: "";
   z-index: 100;
 }
@@ -64,8 +60,5 @@ body {
   color: #0094ff;
   content: "\f110";
   z-index: 101;
-  -webkit-animation: fa-spin 1s infinite linear;
-          animation: fa-spin 1s infinite linear;
+  animation: fa-spin 1s infinite linear;
 }
-
-/*# sourceMappingURL=common.css.map */
