0313添加了点击购物车跳转登录，和实现登录注册的功能

--- a/src/css/goods_detail.less
+++ b/src/css/goods_detail.less
@@ -1,5 +1,13 @@
 @import './common.less';
 
+// 设置mui.toast()弹框的样式
+.mui-toast-container {
+    // width: 500px!important;
+}  
+.mui-toast-message {
+    white-space: nowrap;
+    
+} 
 .pyg_view{
     background-color: #fff;
     padding: 0 10px;
