--- a/src/css/goods_detail.css
+++ b/src/css/goods_detail.css
@@ -39,6 +39,32 @@ body {
 .pyg_footer a i {
   font-size: 18px;
 }
+.loadding::before {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: .5;
+  content: "";
+  z-index: 100;
+}
+.loadding::after {
+  font: normal normal normal 14px/1 FontAwesome;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  margin-left: -50px;
+  font-size: 100px;
+  color: #0094ff;
+  content: "\f110";
+  z-index: 101;
+  animation: fa-spin 1s infinite linear;
+}
+.mui-toast-message {
+  white-space: nowrap;
+}
 .pyg_view {
   background-color: #fff;
   padding: 0 10px;
