--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -62,3 +62,139 @@ body {
   z-index: 101;
   animation: fa-spin 1s infinite linear;
 }
+.pyg_view {
+  padding: 10px;
+}
+.pyg_view .cart_address {
+  margin-bottom: 20px;
+}
+.pyg_view .cart_address .cart_add_title {
+  font-size: 14px;
+  color: #666;
+}
+.pyg_view .cart_address .cart_add_content {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.pyg_view .cart_address .cart_add_content .add_icon {
+  flex: 2;
+  text-align: center;
+}
+.pyg_view .cart_address .cart_add_content .add_icon span {
+  font-size: 26px;
+}
+.pyg_view .cart_address .cart_add_content .add_info {
+  flex: 10;
+}
+.pyg_view .cart_address .cart_add_content .add_info .add_info_title {
+  font-size: 14px;
+  color: #333;
+}
+.pyg_view .cart_address .cart_add_content .add_info .add_info_content {
+  font-size: 13px;
+  color: #666;
+}
+.pyg_view .pyg_total_price {
+  margin-bottom: 20px;
+}
+.pyg_view .pyg_total_price .total_price_title {
+  font-size: 14px;
+  color: #666;
+}
+.pyg_view .pyg_total_price .total_parice_content {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 10px 6px;
+}
+.pyg_view .pyg_total_price .total_parice_content .content_left {
+  flex: 4;
+}
+.pyg_view .pyg_total_price .total_parice_content .content_left span {
+  font-size: 20px;
+}
+.pyg_view .pyg_total_price .total_parice_content .content_left strong {
+  font-weight: normal;
+  font-size: 18px;
+  color: #f00;
+}
+.pyg_view .pyg_total_price .total_parice_content .content_left strong i {
+  font-style: normal;
+}
+.pyg_view .pyg_total_price .total_parice_content .content_right {
+  flex: 1;
+  font-size: 14px;
+  color: #007aff;
+}
+.pyg_view .cart_order .order_title {
+  font-size: 14px;
+  color: #666;
+}
+.pyg_view .cart_order .order_content {
+  background-color: #fff;
+}
+.pyg_view .cart_order .order_content .list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.pyg_view .cart_order .order_content .list li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 5px;
+}
+.pyg_view .cart_order .order_content .list li .order_check {
+  flex: 1;
+  text-align: center;
+}
+.pyg_view .cart_order .order_content .list li .order_check input {
+  position: static;
+}
+.pyg_view .cart_order .order_content .list li .order_img {
+  flex: 2;
+}
+.pyg_view .cart_order .order_content .list li .order_img img {
+  width: 90%;
+}
+.pyg_view .cart_order .order_content .list li .order_info {
+  flex: 4;
+  padding-left: 10px;
+  overflow: hidden;
+}
+.pyg_view .cart_order .order_content .list li .order_info .info_title {
+  padding-top: 5px;
+  font-size: 14px;
+  color: #666;
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal !important;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.pyg_view .cart_order .order_content .list li .order_info .info_count {
+  padding: 15px 0;
+}
+.pyg_view .cart_order .order_content .list li .order_info .info_price span {
+  font-size: 18px;
+}
+.pyg_view .cart_order .order_content .list li .order_info .info_price span i {
+  font-style: normal;
+}
+#pyg_body .del_btn,
+#pyg_body .order_check,
+#pyg_body .info_count {
+  display: none;
+}
+#pyg_body.edit_status .del_btn,
+#pyg_body.edit_status .order_check,
+#pyg_body.edit_status .info_count {
+  display: block;
+}
