--- a/src/css/cart.less
+++ b/src/css/cart.less
@@ -1,1 +1,152 @@
 @import './common.less';
+
+.pyg_view{
+    padding: 10px;
+    .cart_address{
+        margin-bottom: 20px;
+        .cart_add_title{
+            font-size: 14px;
+            color: #666;
+        }
+        .cart_add_content{
+            display: flex;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 5px;
+            .add_icon{
+                flex: 2;
+                text-align: center;
+                span{
+                    font-size: 26px;
+                }
+            }
+            .add_info{
+                flex: 10;
+                .add_info_title{
+                    font-size: 14px;
+                    color: #333;
+                }
+                .add_info_content{
+                    font-size: 13px;
+                    color: #666;
+                }
+            }
+        }
+    }
+    .pyg_total_price{
+        margin-bottom: 20px;
+        .total_price_title{
+            font-size: 14px;
+            color: #666;
+        }
+        .total_parice_content{
+            display: flex;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 5px;
+            padding: 10px 6px;
+            .content_left{
+                flex: 4;
+                span{
+                    font-size: 20px;
+                }
+                strong{
+                    font-weight: normal;
+                    font-size: 18px;
+                    color: #f00;
+                    i{
+                        font-style: normal;
+                    }
+                }
+            }
+            .content_right{
+                flex: 1;
+                font-size: 14px;
+                color: #007aff;
+            }
+        }
+    }
+    .cart_order{
+       .order_title{
+        font-size: 14px;
+        color: #666;
+       }
+       .order_content{
+           background-color: #fff;
+        .list{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            li{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                border-bottom: 1px solid #ccc;   
+                padding: 5px;             
+                .order_check{
+                    flex: 1;
+                    text-align: center;
+                    input{
+                        position: static;
+                    }
+                }
+                .order_img{
+                    flex: 2;
+                    img{
+                        width: 90%;
+                    }
+                }
+                .order_info{
+                    flex: 4;
+                    padding-left: 10px;
+                    overflow: hidden;
+                    .info_title{
+                        padding-top: 5px;
+                        font-size: 14px;
+                        color: #666;
+                        display: -webkit-box;
+                        overflow: hidden;
+                        white-space: normal !important;
+                        text-overflow: ellipsis;
+                        word-wrap: break-word;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+
+                    }
+                    .info_count{    
+                        padding: 15px 0;
+                    }
+                    .info_price{
+                        span{
+                            font-size: 18px;
+                            i{
+                                font-style: normal;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+       }
+    }
+}
+
+// 一开始 下面的标签应该是隐藏
+#pyg_body {
+    .del_btn,
+    .order_check,
+    .info_count {
+      display: none;
+    }
+  }
+  
+  // 显示标签
+  // body.edit_status{
+  #pyg_body.edit_status{
+    .del_btn,
+    .order_check,
+    .info_count {
+      display: block;
+    }
+  }
